--- a/drink-menu/src/App.css
+++ b/drink-menu/src/App.css
@@ -4,4 +4,8 @@
   padding: 2rem;
   text-align: center;
 }
- 
+  
+
+#footer-text, #drink-title, #header-text {
+  font-family: 'Pacifico', cursive;
+}
