--- a/drink-menu/src/App.css
+++ b/drink-menu/src/App.css
@@ -13,7 +13,7 @@
 }
 
 .drink-card {
-  border-bottom: 1px solid black;
+  border: 1px solid black;
   margin: 1rem;
   background-color: rgba(229, 235, 217, 0.8);
 }
